--- a/src/main/resources/dr/sparky/office/drsparkysoffice/home-view.fxml
+++ b/src/main/resources/dr/sparky/office/drsparkysoffice/home-view.fxml
@@ -1,43 +1,96 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
-<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="642.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.RegisterController">
-   <ImageView fitHeight="55.0" fitWidth="50.0" layoutX="134.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
+<?import javafx.scene.layout.Pane?>
+<Pane fx:id="rootPane" prefHeight="642.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.HomeController">
+   <ImageView fitHeight="50.0" fitWidth="22.0" layoutX="48.0" layoutY="22.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@logo.png" />
+         <Image url="@images/logo.png" />
       </image>
    </ImageView>
-   <Label layoutX="104.0" layoutY="102.0" text="Dr Sparky's Office" textFill="#616161">
+   <Label layoutX="77.0" layoutY="23.0" text="Dr Sparky's Office" textFill="#616161">
       <font>
-         <Font name="Arial Bold" size="13.0" />
+         <Font name="Arial Bold" size="16.0" />
       </font>
    </Label>
-   <Label layoutX="37.0" layoutY="157.0" text="Returning User?">
+   <Label layoutX="37.0" layoutY="67.0" text="Welcome, Jhon">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
    </Label>
-   <Label layoutX="37.0" layoutY="189.0" text="Hi, Select The appropiate login option." textFill="#545454">
+   <Label layoutX="37.0" layoutY="149.0" text="Medication1               10mg         request refill" textFill="#545454">
       <font>
          <Font name="Arial" size="12.0" />
       </font>
    </Label>
-   <Button layoutX="35.0" layoutY="221.0" mnemonicParsing="false" onAction="#patientButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Patient Login" textFill="WHITE">
+   <ImageView fx:id="menuImageViewId" fitHeight="16.0" fitWidth="17.0" layoutX="22.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+      <image>
+         <Image url="@images/menu.png" />
+      </image>
+   </ImageView>
+   <Label layoutX="37.0" layoutY="117.0" text="Current Medications">
       <font>
-         <Font name="Arial" size="13.0" />
-      </font>
-   </Button>
-   <Button layoutX="34.0" layoutY="279.0" mnemonicParsing="false" onAction="#nurseButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Nurse Login" textFill="WHITE" />
-   <Button layoutX="35.0" layoutY="337.0" mnemonicParsing="false" onAction="#doctorButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Doctor Login" textFill="WHITE" />
-   <Label layoutX="241.0" layoutY="580.0" onDragDetected="#signUpButtonAction" prefHeight="22.0" prefWidth="43.0" text="Sign Up" textFill="RED">
-      <font>
-         <Font name="Arial Bold" size="11.0" />
+         <Font name="Arial Bold" size="22.0" />
       </font>
    </Label>
-</AnchorPane>
+   <Label layoutX="37.0" layoutY="169.0" text="Medication1               10mg         request refill" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="37.0" layoutY="189.0" text="Medication1               10mg         request refill" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="52.0" layoutY="259.0" text="10/24/2024                    physical" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="37.0" layoutY="227.0" text="Previous Visits">
+      <font>
+         <Font name="Arial Bold" size="22.0" />
+      </font>
+   </Label>
+   <Label layoutX="52.0" layoutY="279.0" text="5/16/2023                    ear infection" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="51.0" layoutY="349.0" prefWidth="120.0" text="CVS Pharmacy 44st E" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="37.0" layoutY="317.0" text="Current Pharmacy">
+      <font>
+         <Font name="Arial Bold" size="22.0" />
+      </font>
+   </Label>
+   <Label layoutX="52.0" layoutY="369.0" text="Thomas Rd.85391" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="252.0" layoutY="361.0" text="Edit" textFill="#545454">
+      <font>
+         <Font name="Arial" size="14.0" />
+      </font>
+   </Label>
+   <Label layoutX="56.0" layoutY="442.0" text="All messages" textFill="#545454">
+      <font>
+         <Font name="Arial" size="12.0" />
+      </font>
+   </Label>
+   <Label layoutX="37.0" layoutY="410.0" text="Inbox">
+      <font>
+         <Font name="Arial Bold" size="22.0" />
+      </font>
+   </Label>
+</Pane>
