--- a/src/main/resources/dr/sparky/office/drsparkysoffice/register-view.fxml
+++ b/src/main/resources/dr/sparky/office/drsparkysoffice/register-view.fxml
@@ -1,16 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.geometry.Insets?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ScrollPane?>
+<?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
+<?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="642.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.RegisterController">
+<AnchorPane prefHeight="640.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.RegisterController">
    <ImageView fitHeight="55.0" fitWidth="50.0" layoutX="134.0" layoutY="46.0" pickOnBounds="true" preserveRatio="true">
       <image>
-         <Image url="@logo.png" />
+         <Image url="@images/logo.png" />
       </image>
    </ImageView>
    <Label layoutX="104.0" layoutY="102.0" text="Dr Sparky's Office" textFill="#616161">
@@ -18,26 +22,93 @@
          <Font name="Arial Bold" size="13.0" />
       </font>
    </Label>
-   <Label layoutX="37.0" layoutY="157.0" text="Returning User?">
+   <Label layoutX="37.0" layoutY="157.0" text="Create Account">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
    </Label>
-   <Label layoutX="37.0" layoutY="189.0" text="Hi, Select The appropiate login option." textFill="#545454">
+   <Label layoutX="37.0" layoutY="189.0" text="Please provide the following informations." textFill="#545454">
       <font>
          <Font name="Arial" size="12.0" />
       </font>
    </Label>
-   <Button layoutX="35.0" layoutY="221.0" mnemonicParsing="false" onAction="#patientButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Patient Login" textFill="WHITE">
-      <font>
-         <Font name="Arial" size="13.0" />
-      </font>
-   </Button>
-   <Button layoutX="34.0" layoutY="279.0" mnemonicParsing="false" onAction="#nurseButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Nurse Login" textFill="WHITE" />
-   <Button layoutX="35.0" layoutY="337.0" mnemonicParsing="false" onAction="#doctorButtonAction" prefHeight="38.0" prefWidth="254.0" style="-fx-background-color: red;" text="Doctor Login" textFill="WHITE" />
-   <Label layoutX="241.0" layoutY="580.0" onDragDetected="#signUpButtonAction" prefHeight="22.0" prefWidth="43.0" text="Sign Up" textFill="RED">
-      <font>
-         <Font name="Arial Bold" size="11.0" />
-      </font>
-   </Label>
+   <ScrollPane layoutX="26.0" layoutY="214.0" prefHeight="400.0" prefWidth="266.0">
+      <content>
+         <VBox prefHeight="345.0" prefWidth="245.0">
+            <children>
+               <Label text="Email" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+                  <VBox.margin>
+                     <Insets bottom="3.0" top="5.0" />
+                  </VBox.margin>
+               </Label>
+               <TextField fx:id="emailTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter email" />
+               <Label text="Password" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="passwordTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter password" />
+               <Label text="First Name" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="firstNameTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter first name" />
+               <Label text="Last Name" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="lastNameTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter last name" />
+               <Label text="Date of Birth(MM/DD/YYYY)" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="dobTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter date of birth" />
+               <Label text="Phone Number" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="phoneTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter phone number" />
+               <Label text="Insurance Provider" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="insProviderTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter insurance provider" />
+               <Label text="Emarggency Contact First Name" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="emConFNameTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's first name" />
+               <Label text="Emarggency Contact Last Name" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="emConLNameTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's last name" />
+               <Label text="Emarggency Contact Phone Number" textFill="RED">
+                  <font>
+                     <Font name="Arial Bold" size="11.0" />
+                  </font>
+               </Label>
+               <TextField fx:id="emConPhoneTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's phone number" />
+               <Button mnemonicParsing="false" onAction="#submitButtonAction" prefHeight="25.0" prefWidth="245.0" style="-fx-background-color: red;" text="Submit" textFill="WHITE">
+                  <VBox.margin>
+                     <Insets top="10.0" />
+                  </VBox.margin>
+               </Button>
+            </children>
+            <padding>
+               <Insets bottom="10.0" left="13.0" right="10.0" top="10.0" />
+            </padding>
+         </VBox>
+      </content>
+   </ScrollPane>
 </AnchorPane>
