--- a/src/main/resources/dr/sparky/office/drsparkysoffice/login-view.fxml
+++ b/src/main/resources/dr/sparky/office/drsparkysoffice/login-view.fxml
@@ -31,8 +31,8 @@
       </font>
    </Label>
    <Button layoutX="35.0" layoutY="360.0" mnemonicParsing="false" onAction="#signInButtonAction" prefHeight="40.0" prefWidth="254.0" style="-fx-background-color: red;" text="Sign In" textFill="WHITE" />
-   <TextField fx:id="userNameTxtFldID" layoutX="35.0" layoutY="236.0" prefHeight="40.0" prefWidth="254.0" promptText="Enter Username" />
-   <Label layoutX="37.0" layoutY="215.0" text="Username" textFill="RED">
+   <TextField fx:id="userNameTxtFldID" layoutX="35.0" layoutY="236.0" prefHeight="40.0" prefWidth="254.0" promptText="Enter Email" />
+   <Label layoutX="37.0" layoutY="215.0" text="Email" textFill="RED">
       <font>
          <Font name="Arial Bold" size="12.0" />
       </font>
@@ -43,4 +43,6 @@
       </font>
    </Label>
    <PasswordField fx:id="passwordTxtFldID" layoutX="37.0" layoutY="307.0" prefHeight="40.0" prefWidth="254.0" promptText="Enter password" />
+   <Button layoutX="234.0" layoutY="584.0" mnemonicParsing="false" onAction="#backButtonAction" prefHeight="26.0" prefWidth="57.0" style="-fx-background-color: red;" text="Back" textFill="WHITE" />
+   <Label fx:id="errLblId" layoutX="35.0" layoutY="518.0" prefHeight="26.0" prefWidth="254.0" textFill="#dd9393" />
 </AnchorPane>
