--- a/src/main/resources/dr/sparky/office/drsparkysoffice/patient-details-view.fxml
+++ b/src/main/resources/dr/sparky/office/drsparkysoffice/patient-details-view.fxml
@@ -2,7 +2,7 @@
 
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ListView?>
+<?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.image.Image?>
 <?import javafx.scene.image.ImageView?>
@@ -15,7 +15,7 @@
          <Font name="Arial Bold" size="16.0" />
       </font>
    </Label>
-   <Label layoutX="23.0" layoutY="97.0" text="Patients">
+   <Label layoutX="23.0" layoutY="93.0" text="Patients">
       <font>
          <Font name="Arial Bold" size="22.0" />
       </font>
@@ -25,12 +25,12 @@
          <Image url="@images/back-arrow.png" />
       </image>
    </ImageView>
-   <ImageView fx:id="addImageViewId" fitHeight="16.0" fitWidth="17.0" layoutX="272.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
+   <ImageView fx:id="addImageViewId" fitHeight="16.0" fitWidth="17.0" layoutX="282.0" layoutY="26.0" pickOnBounds="true" preserveRatio="true">
       <image>
          <Image url="@images/add.png" />
       </image>
    </ImageView>
-   <Button fx:id="searchBtnId" layoutX="201.0" layoutY="57.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Search" />
-   <TextField fx:id="searchTxtFldId" layoutX="43.0" layoutY="57.0" prefHeight="25.0" prefWidth="150.0" promptText="Enter name" />
-   <ListView fx:id="patientListViewId" layoutX="25.0" layoutY="134.0" prefHeight="486.0" prefWidth="271.0" />
+   <Button fx:id="searchBtnId" layoutX="226.0" layoutY="57.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="72.0" text="Search" />
+   <TextField fx:id="searchTxtFldId" layoutX="24.0" layoutY="57.0" prefHeight="26.0" prefWidth="193.0" promptText="Enter name" />
+   <TableView fx:id="tableViewId" layoutX="24.0" layoutY="128.0" prefHeight="491.0" prefWidth="273.0" />
 </Pane>
