--- a/src/main/resources/dr/sparky/office/drsparkysoffice/add-patient-view.fxml
+++ b/src/main/resources/dr/sparky/office/drsparkysoffice/add-patient-view.fxml
@@ -11,7 +11,7 @@
 <?import javafx.scene.layout.VBox?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane prefHeight="640.0" prefWidth="320.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.AddPatientController">
+<AnchorPane prefHeight="640.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/20.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="dr.sparky.office.drsparkysoffice.controller.AddPatientController">
    <Label layoutX="26.0" layoutY="50.0" text="Create Patient">
       <font>
          <Font name="Arial Bold" size="22.0" />
@@ -22,9 +22,9 @@
          <Font name="Arial" size="12.0" />
       </font>
    </Label>
-   <ScrollPane layoutX="27.0" layoutY="108.0" prefHeight="502.0" prefWidth="266.0">
+   <ScrollPane layoutX="27.0" layoutY="108.0" prefHeight="502.0" prefWidth="539.0">
       <content>
-         <VBox prefHeight="345.0" prefWidth="245.0">
+         <VBox prefHeight="504.0" prefWidth="521.0">
             <children>
                <Label text="Email" textFill="RED">
                   <font>
@@ -34,62 +34,62 @@
                      <Insets bottom="3.0" top="5.0" />
                   </VBox.margin>
                </Label>
-               <TextField fx:id="emailTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter email" />
+               <TextField fx:id="emailTxtFldId" maxHeight="30.0" maxWidth="498.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="498.0" promptText="Enter email" />
                <Label text="Password" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="passwordTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter password" />
+               <TextField fx:id="passwordTxtFldId" maxHeight="30.0" maxWidth="509.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="509.0" promptText="Enter password" />
                <Label text="First Name" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="firstNameTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter first name" />
+               <TextField fx:id="firstNameTxtFldId" maxHeight="30.0" maxWidth="568.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="568.0" promptText="Enter first name" />
                <Label text="Last Name" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="lastNameTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter last name" />
+               <TextField fx:id="lastNameTxtFldId" maxHeight="30.0" maxWidth="646.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="646.0" promptText="Enter last name" />
                <Label text="Date of Birth(MM/DD/YYYY)" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="dobTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter date of birth" />
+               <TextField fx:id="dobTxtFldId" maxHeight="30.0" maxWidth="597.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="597.0" promptText="Enter date of birth" />
                <Label text="Phone Number" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="phoneTxtFldId" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter phone number" />
+               <TextField fx:id="phoneTxtFldId" maxHeight="30.0" maxWidth="655.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="655.0" promptText="Enter phone number" />
                <Label text="Insurance Provider" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="insProviderTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter insurance provider" />
+               <TextField fx:id="insProviderTxtFldID" maxHeight="30.0" maxWidth="546.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="546.0" promptText="Enter insurance provider" />
                <Label text="Emarggency Contact First Name" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="emConFNameTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's first name" />
+               <TextField fx:id="emConFNameTxtFldID" maxHeight="30.0" maxWidth="644.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="644.0" promptText="Enter emargecny contact's first name" />
                <Label text="Emarggency Contact Last Name" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="emConLNameTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's last name" />
+               <TextField fx:id="emConLNameTxtFldID" maxHeight="30.0" maxWidth="701.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="701.0" promptText="Enter emargecny contact's last name" />
                <Label text="Emarggency Contact Phone Number" textFill="RED">
                   <font>
                      <Font name="Arial Bold" size="11.0" />
                   </font>
                </Label>
-               <TextField fx:id="emConPhoneTxtFldID" maxHeight="30.0" maxWidth="225.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="225.0" promptText="Enter emargecny contact's phone number" />
-               <Button mnemonicParsing="false" onAction="#submitButtonAction" prefHeight="25.0" prefWidth="245.0" style="-fx-background-color: red;" text="Submit" textFill="WHITE">
+               <TextField fx:id="emConPhoneTxtFldID" maxHeight="30.0" maxWidth="663.0" minHeight="30.0" minWidth="225.0" prefHeight="30.0" prefWidth="663.0" promptText="Enter emargecny contact's phone number" />
+               <Button mnemonicParsing="false" onAction="#submitButtonAction" prefHeight="26.0" prefWidth="660.0" style="-fx-background-color: red;" text="Submit" textFill="WHITE">
                   <VBox.margin>
                      <Insets top="10.0" />
                   </VBox.margin>
@@ -101,9 +101,8 @@
          </VBox>
       </content>
    </ScrollPane>
-   <Label fx:id="errMsgLabelId" alignment="CENTER" layoutX="17.0" layoutY="609.0" prefHeight="17.0" prefWidth="288.0" textAlignment="CENTER" textFill="#f27c7c" />
-   <ImageView fx:id="imgBackBtn" fitHeight="20.0" fitWidth="20.0" layoutX="26.0" layoutY="15.0" pickOnBounds="true"
-              preserveRatio="true">
-      <Image url="@images/back-arrow.png"/>
+   <Label fx:id="errMsgLabelId" alignment="CENTER" layoutX="17.0" layoutY="614.0" prefHeight="17.0" prefWidth="568.0" textAlignment="CENTER" textFill="#f27c7c" />
+   <ImageView fx:id="imgBackBtn" fitHeight="20.0" fitWidth="20.0" layoutX="26.0" layoutY="15.0" pickOnBounds="true" preserveRatio="true">
+      <Image url="@images/back-arrow.png" />
    </ImageView>
 </AnchorPane>
